[package]
name = "ayncsrust"
version = "0.1.0"
authors = ["antash <mishraantash34@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
hyper = "0.13"
tokio = {version = "0.2", features = ["full"]}

anyhow = "1.0.31"
reqwest = {version = "0.10.4", features = ["blocking"]}
