[package]
name = "libp2pexamples"
version = "0.1.0"
authors = ["antash <mishraantash34@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.6.5"
libp2p = "0.28"
futures = "0.3.6"
env_logger = "0.7.1"