[package]
name = "matrix"
version = "0.1.0"
authors = ["antash <mishraantash34@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite = "0.23.1"
serde_json = "1.0.55"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0.114"
reqwest = { version = "0.10.6", features = ["json"] }
tokio = { version = "0.2.21", features = ["full"] }

